@@ -8,9 +8,11 @@ import com.netflix.graphql.dgs.DgsQuery;
 import com.netflix.graphql.dgs.InputArgument;
 import com.netflix.graphql.dgs.DgsMutation;
 import java.io.File;
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.List;
+import javax.annotation.PostConstruct;
 import org.springframework.core.io.ClassPathResource;
 import osa.ora.graph.data.beans.Item;
 import osa.ora.graph.data.beans.NewItem;
@@ -25,11 +27,15 @@ import osa.ora.graph.data.beans.Order;
 public class OrdersDatafetcher {
     //all orders
     private static List<Order> orders = new ArrayList();
-    //load initial orders from orders.json file as initial list for testing ...
-    static{
+    /**
+     * load initial orders from orders.json file as initial list for testing ...
+     */
+    @PostConstruct
+    public void initialize() {
         try {
-            File resource = new ClassPathResource("orders.json").getFile();
-            String itemsJson = new String(Files.readAllBytes(resource.toPath()));
+            InputStream is = this.getClass().getClassLoader().getResourceAsStream("orders.json");
+            //File resource = new File(is);
+            String itemsJson = new String(is.readAllBytes());
             //initialize the catalog here
             ObjectMapper objectMapper = new ObjectMapper();
             orders = objectMapper.readValue(itemsJson, new TypeReference<List<Order>>(){});
